Fixed text alignment of callout headers

--- a/src/app/callouts/callouts.component.css
+++ b/src/app/callouts/callouts.component.css
@@ -7,13 +7,10 @@
 
 .mat-mdc-card-header {
   background-color: white;
-  align-items: center;
   font-weight: bold;
   font-style: italic;
-
-  > .mat-mdc-card-header-text {
-    text-align: center;
-  }
+  display: flex;
+  justify-content: center;
 }
 
 .totalConferencesTracked {
